--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "webpack-watch": "webpack -w",
+    "webpack-watch": "webpack -w --colors",
     "express-server": "node ./server",
     "dev": "concurrently --kill-others \"npm run webpack-watch\" \"npm run express-server\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "prod": "npm run clean && webpack --config webpack.config.prod.js --progress --profile --colors",
+    "clean":"rimraf build"
   },
   "repository": {
     "type": "git",
